# waitpid-any

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix  rust-toolchain.toml.example
.github/workflows/: ci.yaml  future_proof.yaml
src/: bsd.rs  lib.rs  linux.rs  tests.rs  windows.rs
